# black-magic

./: .gitignore  Makefile  README.md
android/app/: build.gradle
android/app/src/androidTest/java/com/fithian/dan/blackmagic/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/fithian/dan/blackmagic/: MainActivity.kt  Teammate.kt  TeammatesActivity.kt
android/app/src/main/res/layout/: launch.xml  main.xml  teammate_row.xml  teammates.xml
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/com/fithian/dan/blackmagic/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
docker/: Dockerfile
rust/: Cargo.toml
rust/.cargo/: config
rust/src/: lib.rs
